--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                    <!-- <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a> -->
 
                 </div><!-- /.navbar-header -->
 
@@ -210,7 +210,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -220,7 +220,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-5.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -365,7 +365,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Project title</h4>
@@ -383,7 +383,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="assets/img/portfolio-5.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Project title</h4>
