--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/recent.png" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-3.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -210,7 +210,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/Portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/Portfolio-6.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Project Title</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -302,7 +302,7 @@
                 </form>
             </div>
         </section><!-- /.section-form -->
-
+   
     </main><!-- /#main -->
 
     <footer id="colophon" class="site-footer">
@@ -314,7 +314,7 @@
                     <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
                     <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
                 </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2022.Ahmad Faizal All Rights Reserved</p></div>
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
                         <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
@@ -342,7 +342,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/recent.png" alt="">
+            <img class="img-res" src="assets/img/Portfolio-3.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Project title</h4>
@@ -365,7 +365,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/Portfolio-2.jpg" alt="">
+            <img class="img-res" src="assets/img/Portfolio-6.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Project title</h4>
@@ -437,7 +437,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-6.jpg" alt="">
+            <img class="img-res" src="assets/img/services-bg.jpg" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Project title</h4>
